레포지토리 수정